--- a/resources/assets/css/application.css
+++ b/resources/assets/css/application.css
@@ -25,6 +25,9 @@ footer {
     background-color: #b3b3ff;
     padding: 30px 0;
 }
+textarea {
+    height: 100px;
+}
 .field {
     margin-bottom: 10px;
     font-size: 15px;
