--- a/resources/assets/css/application.css
+++ b/resources/assets/css/application.css
@@ -269,7 +269,7 @@ textarea {
     display: none;
 }
 .morelink {
-    display: block;
+    margin: 0px !important;
 }
 .search-option {
     height: 200px;
