--- a/resources/assets/css/application.css
+++ b/resources/assets/css/application.css
@@ -28,6 +28,67 @@ footer {
 textarea {
     height: 100px;
 }
+li {
+    list-style: none;
+}
+.ava-img {
+    width: 30px !important;
+}
+.cate-div {
+    padding: 5px;
+}
+.dropbtn-cate {
+background-color: #4CAF50;
+color: white;
+padding: 16px;
+font-size: 16px;
+border: none;
+}
+.dropdown-cate {
+    position: relative;
+    display: inline-block;
+}
+.dropdown-content-parent {
+    display: none;
+    position: absolute;
+    background-color: #f9f9f9;
+    min-width: 160px;
+    box-shadow: 0px 8px 16px 0px rgba(0,0,0,0.2);
+    z-index: 1;
+}
+.dropdown-content-parent a {
+    color: black;
+    padding: 12px 16px;
+    text-decoration: none;
+    display: block;
+}
+.dropdown-content-parent a:hover {
+    background-color: #f1f1f1;
+}
+.dropdown-cate:hover .dropdown-content-parent {
+    display: block;
+}
+.dropdown-cate:hover .dropbtn-cate {
+    background-color: #3b5da0;
+}
+.dropdown-level-2 {
+    display: none;
+    padding: 0;
+    width: 100%;
+}
+.parent {
+    position: relative;
+}
+.parent:hover ul {
+    position: absolute;
+    display: inline-block;
+    left: 160px;
+    top: 0px;
+    background: #f1f1f1;
+}
+.parent:hover ul li {
+    list-style: none;
+}
 .save-collection li {
     display: none;
     padding: 0px 10px !important;
